--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,5 @@
 // Variables
-
 // Restated Bootstrap Variables
-
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
@@ -13,27 +11,24 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
-
 $blue: #007bff !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #b77f7e !default;
 $red: #80170f !default;
-$orange: #fd7e14 !default;
+$orange: #FF7F50 !default;
 $yellow: #ffc107 !default;
 $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
-
-$primary: $red !default;
-$secondary: $pink !default;
+$primary: $orange !default;
+$secondary: $yellow !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-800 !default;
-
 // Bootstrap and its default variables
 @import 'bootstrap/scss/bootstrap';
 // BootstrapVue and its default variables
